[tool.poetry]
name = "langchain-tutorials"
version = "0.1.0"
description = ""
authors = ["Jeremy Watt <jermwatt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.138"
requests = "^2.28.2"
pandas = "^2.0.0"
numpy = "^1.24.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
openai = "^0.27.4"
llama-cpp-python = "^0.1.32"
google-search-results = "^2.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
